# IntelOpenCLSamples

./: CMakeLists.txt  Makefile  README.md
BitonicSort/: .Makefile.swo  .Makefile.swp  CMakeLists.txt  Makefile
CapsBasic/: CMakeLists.txt
GEMM/: CMakeLists.txt  gemm.cpp
GodRays/: CMakeLists.txt  GodRaysNative.cpp  Makefile
MedianFilter/: Makefile  MedianFilter.cpp
MonteCarlo/: Makefile  README.TXT
MotionEstimation/: Makefile  README.txt
MotionEstimationAdvanced/: CMakeLists.txt  Makefile  README.txt  main.cpp
MultiDeviceBasic/: Makefile  README.TXT
SimpleOptimizations/: CMakeLists.txt  Makefile
ToneMapping/: CMakeLists.txt  Makefile  ToneMapping.cpp  ToneMappingNative.cpp
ToneMappingMultiDevice/: Makefile  ToneMappingMultiDevice.cpp  ToneMappingNative.cpp
cmake/: FindOpenCL.cmake
